--- a/config/config.hpp.in
+++ b/config/config.hpp.in
@@ -112,6 +112,10 @@
 // Enable MFEM functionality based on the PUMI library
 // #define MFEM_USE_PUMI
 
+// Build the GPU/CUDA-enabled version of the MFEM library.
+// Requires a CUDA compiler (nvcc).
+// #define MFEM_USE_CUDA
+
 // Enable functionality based on the RAJA library.
 // #define MFEM_USE_RAJA
 
