--- a/config/config.hpp.in
+++ b/config/config.hpp.in
@@ -122,7 +122,7 @@
 // Enable functionality based on the OCCA library.
 // #define MFEM_USE_OCCA
 
-// Enable functionality based on the Memory Manager
+// Enable MFEM's internal Memory Manager (needed e.g. for MFEM_USE_CUDA)
 // #define MFEM_USE_MM
 
 // Version of HYPRE used for building MFEM.
