makefile cuda, pcuda, cudebug and pcudebug targets

--- a/config/config.mk.in
+++ b/config/config.mk.in
@@ -50,6 +50,7 @@ MFEM_CXXFLAGS  = @MFEM_CXXFLAGS@
 MFEM_TPLFLAGS  = @MFEM_TPLFLAGS@
 MFEM_INCFLAGS  = @MFEM_INCFLAGS@
 MFEM_PICFLAG   = @MFEM_PICFLAG@
+MFEM_SOFLAGS   = @MFEM_SOFLAGS@
 MFEM_FLAGS     = @MFEM_FLAGS@
 MFEM_EXT_LIBS  = @MFEM_EXT_LIBS@
 MFEM_LIBS      = @MFEM_LIBS@
