--- a/config/config.mk.in
+++ b/config/config.mk.in
@@ -44,23 +44,24 @@ MFEM_USE_OCCA        = @MFEM_USE_OCCA@
 MFEM_USE_MM          = @MFEM_USE_MM@
 
 # Compiler, compile options, and link options
-MFEM_CXX       = @MFEM_CXX@
-MFEM_CPPFLAGS  = @MFEM_CPPFLAGS@
-MFEM_CXXFLAGS  = @MFEM_CXXFLAGS@
-MFEM_TPLFLAGS  = @MFEM_TPLFLAGS@
-MFEM_INCFLAGS  = @MFEM_INCFLAGS@
-MFEM_PICFLAG   = @MFEM_PICFLAG@
-MFEM_SOFLAGS   = @MFEM_SOFLAGS@
-MFEM_FLAGS     = @MFEM_FLAGS@
-MFEM_EXT_LIBS  = @MFEM_EXT_LIBS@
-MFEM_LIBS      = @MFEM_LIBS@
-MFEM_LIB_FILE  = @MFEM_LIB_FILE@
-MFEM_STATIC    = @MFEM_STATIC@
-MFEM_SHARED    = @MFEM_SHARED@
-MFEM_BUILD_TAG = @MFEM_BUILD_TAG@
-MFEM_PREFIX    = @MFEM_PREFIX@
-MFEM_INC_DIR   = @MFEM_INC_DIR@
-MFEM_LIB_DIR   = @MFEM_LIB_DIR@
+MFEM_CXX        = @MFEM_CXX@
+MFEM_CPPFLAGS   = @MFEM_CPPFLAGS@
+MFEM_CXXFLAGS   = @MFEM_CXXFLAGS@
+MFEM_TPLFLAGS   = @MFEM_TPLFLAGS@
+MFEM_INCFLAGS   = @MFEM_INCFLAGS@
+MFEM_PICFLAG    = @MFEM_PICFLAG@
+MFEM_SOFLAGS    = @MFEM_SOFLAGS@
+MFEM_FLAGS      = @MFEM_FLAGS@
+MFEM_LINK_FLAGS = @MFEM_LINK_FLAGS@
+MFEM_EXT_LIBS   = @MFEM_EXT_LIBS@
+MFEM_LIBS       = @MFEM_LIBS@
+MFEM_LIB_FILE   = @MFEM_LIB_FILE@
+MFEM_STATIC     = @MFEM_STATIC@
+MFEM_SHARED     = @MFEM_SHARED@
+MFEM_BUILD_TAG  = @MFEM_BUILD_TAG@
+MFEM_PREFIX     = @MFEM_PREFIX@
+MFEM_INC_DIR    = @MFEM_INC_DIR@
+MFEM_LIB_DIR    = @MFEM_LIB_DIR@
 
 # Location of test.mk
 MFEM_TEST_MK = @MFEM_TEST_MK@
