--- a/config/config.mk.in
+++ b/config/config.mk.in
@@ -52,7 +52,6 @@ MFEM_INCFLAGS   = @MFEM_INCFLAGS@
 MFEM_PICFLAG    = @MFEM_PICFLAG@
 MFEM_SOFLAGS    = @MFEM_SOFLAGS@
 MFEM_FLAGS      = @MFEM_FLAGS@
-MFEM_LINK_FLAGS = @MFEM_LINK_FLAGS@
 MFEM_EXT_LIBS   = @MFEM_EXT_LIBS@
 MFEM_LIBS       = @MFEM_LIBS@
 MFEM_LIB_FILE   = @MFEM_LIB_FILE@
@@ -70,6 +69,9 @@ MFEM_TEST_MK = @MFEM_TEST_MK@
 MFEM_MPIEXEC    = @MFEM_MPIEXEC@
 MFEM_MPIEXEC_NP = @MFEM_MPIEXEC_NP@
 MFEM_MPI_NP     = @MFEM_MPI_NP@
+
+# The NVCC compiler cannot link with -x=cu
+MFEM_LINK_FLAGS := $(filter-out -x=cu, $(MFEM_FLAGS))
 
 # Optional extra configuration
 @MFEM_CONFIG_EXTRA@
