Renamed the old OpenMP support option to MFEM_LEGACY_USE_OPENP, so MFEM_LEGACY_OPENMP can be used for OpenMP support in the Okina kernels.

--- a/config/config.mk.in
+++ b/config/config.mk.in
@@ -39,6 +39,8 @@ MFEM_USE_SIDRE       = @MFEM_USE_SIDRE@
 MFEM_USE_CONDUIT     = @MFEM_USE_CONDUIT@
 MFEM_USE_PUMI        = @MFEM_USE_PUMI@
 
+MFEM_LEGACY_USE_OPENMP = @MFEM_LEGACY_USE_OPENMP@
+
 # Compiler, compile options, and link options
 MFEM_CXX       = @MFEM_CXX@
 MFEM_CPPFLAGS  = @MFEM_CPPFLAGS@
