--- a/config/cmake/config.hpp.in
+++ b/config/cmake/config.hpp.in
@@ -62,8 +62,11 @@
 // allocation and de-allocation.
 #cmakedefine MFEM_THREAD_SAFE
 
-// Enable experimental OpenMP support. Requires MFEM_THREAD_SAFE.
+// Enable OpenMP support.
 #cmakedefine MFEM_USE_OPENMP
+
+// [Deprecated] Enable legacy OpenMP support. Requires MFEM_THREAD_SAFE.
+#cmakedefine MFEM_LEGACY_USE_OPENMP
 
 // Enable MFEM functionality based on the Mesquite library.
 #cmakedefine MFEM_USE_MESQUITE
