--- a/config/config.hpp.in
+++ b/config/config.hpp.in
@@ -62,8 +62,11 @@
 // allocation and de-allocation.
 // #define MFEM_THREAD_SAFE
 
-// Enable experimental OpenMP support. Requires MFEM_THREAD_SAFE.
+// Enable OpenMP support.
 // #define MFEM_USE_OPENMP
+
+// [Deprecated] Enable legacy OpenMP support. Requires MFEM_THREAD_SAFE.
+// #define MFEM_LEGACY_USE_OPENMP
 
 // Internal MFEM option: enable group/batch allocation for some small objects.
 // #define MFEM_USE_MEMALLOC
