--- a/config/config.hpp.in
+++ b/config/config.hpp.in
@@ -63,7 +63,7 @@
 // #define MFEM_THREAD_SAFE
 
 // Enable experimental OpenMP support. Requires MFEM_THREAD_SAFE.
-// #define MFEM_USE_OPENMP
+// #define MFEM_USE_LEGACY_OPENMP
 
 // Internal MFEM option: enable group/batch allocation for some small objects.
 // #define MFEM_USE_MEMALLOC
