Revert "Renamed the old OpenMP support option to MFEM_LEGACY_USE_OPENP, so"
This reverts commit 575f351419bd8e23261d04cabd765ebc457568ef.

--- a/config/cmake/config.hpp.in
+++ b/config/cmake/config.hpp.in
@@ -62,11 +62,8 @@
 // allocation and de-allocation.
 #cmakedefine MFEM_THREAD_SAFE
 
-// Enable OpenMP support.
+// Enable experimental OpenMP support. Requires MFEM_THREAD_SAFE.
 #cmakedefine MFEM_USE_OPENMP
-
-// [Deprecated] Enable legacy OpenMP support. Requires MFEM_THREAD_SAFE.
-#cmakedefine MFEM_LEGACY_USE_OPENMP
 
 // Enable MFEM functionality based on the Mesquite library.
 #cmakedefine MFEM_USE_MESQUITE
