--- a/config/config.hpp.in
+++ b/config/config.hpp.in
@@ -62,7 +62,7 @@
 // allocation and de-allocation.
 // #define MFEM_THREAD_SAFE
 
-// Enable experimental OpenMP support. Requires MFEM_THREAD_SAFE.
+// [Deprecated] Enable OpenMP support. Requires MFEM_THREAD_SAFE.
 // #define MFEM_USE_LEGACY_OPENMP
 
 // Internal MFEM option: enable group/batch allocation for some small objects.
