--- a/config/config.mk.in
+++ b/config/config.mk.in
@@ -12,6 +12,8 @@
 # Variables corresponding to defines in config.hpp (YES, NO, or value)
 MFEM_VERSION         = @MFEM_VERSION@
 MFEM_VERSION_STRING  = @MFEM_VERSION_STRING@
+MFEM_SOURCE_DIR      = @MFEM_SOURCE_DIR@
+MFEM_INSTALL_DIR     = @MFEM_INSTALL_DIR@
 MFEM_GIT_STRING      = @MFEM_GIT_STRING@
 MFEM_USE_MPI         = @MFEM_USE_MPI@
 MFEM_USE_METIS       = @MFEM_USE_METIS@
