Add MFEM_USE_OPENMP back in a few other necessary locations

--- a/config/cmake/config.hpp.in
+++ b/config/cmake/config.hpp.in
@@ -62,6 +62,9 @@
 // allocation and de-allocation.
 #cmakedefine MFEM_THREAD_SAFE
 
+// Enable OpenMP support. Requires MFEM_THREAD_SAFE.
+#cmakedefine MFEM_USE_OPENMP
+
 // Enable experimental OpenMP support. Requires MFEM_THREAD_SAFE.
 #cmakedefine MFEM_USE_LEGACY_OPENMP
 
