--- a/config/config.hpp.in
+++ b/config/config.hpp.in
@@ -68,10 +68,10 @@
 // allocation and de-allocation.
 // #define MFEM_THREAD_SAFE
 
-// Enable OpenMP support. Requires MFEM_THREAD_SAFE.
+// Enable the OpenMP backend.
 // #define MFEM_USE_OPENMP
 
-// [Deprecated] Enable OpenMP support. Requires MFEM_THREAD_SAFE.
+// [Deprecated] Enable experimental OpenMP support. Requires MFEM_THREAD_SAFE.
 // #define MFEM_USE_LEGACY_OPENMP
 
 // Internal MFEM option: enable group/batch allocation for some small objects.
