Adding adios2 dependency in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -298,6 +298,18 @@ if (MFEM_USE_RAJA)
    find_package(RAJA REQUIRED)
 endif()
 
+# ADIOS2 for I/O
+if (MFEM_USE_ADIOS2)
+   # policy to workwith targets ::
+   if(POLICY CMP0028)
+     cmake_policy(SET CMP0028 NEW)
+   endif()
+   find_package(ADIOS2 REQUIRED)
+   if(MFEM_USE_MPI)
+      find_package(MPI REQUIRED)
+   endif()
+endif()
+
 # MFEM_TIMER_TYPE
 if (NOT DEFINED MFEM_TIMER_TYPE)
   if (APPLE)
@@ -386,6 +398,12 @@ add_library(mfem ${SOURCES} ${HEADERS} ${MASTER_HEADERS})
 # message(STATUS "TPL_LIBRARIES = ${TPL_LIBRARIES}")
 if (CMAKE_VERSION VERSION_GREATER 2.8.11)
   target_link_libraries(mfem PUBLIC ${TPL_LIBRARIES})
+  if(MFEM_USE_ADIOS2)
+    target_link_libraries(mfem PRIVATE adios2::adios2)
+  endif()
+  if(MFEM_USE_MPI)
+    target_link_libraries(mfem PUBLIC MPI::MPI_C)
+  endif() 
 else()
   target_link_libraries(mfem ${TPL_LIBRARIES})
 endif()
